# anchor-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  HowTo.md  Makefile  README.md  dmg.json  ep.sh  main.spec  mk-icns.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.json
anchor/: __init__.py  application.py  dialog_window.py  resources.qrc  resources_rc.py
anchor/core/: __init__.py  core_settings.py  git_interactor.py  jira_interactor.py  worker_pool.py
anchor/model/: app_data.py
anchor/styles/: light.qss
anchor/tests/: test_app_data.py  test_application.py
anchor/ui/: configuration_dialog.py  feature_branch_dialog.py  jira_configuration_dialog.py  menus.py  progress_dialog.py  toolbar.py  updater_dialog.py
anchor/ui/presenters/: __init__.py  apps_presenter.py  config_presenter.py  feature_branch_presenter.py  git_stats_presenter.py  main_presenter.py  ticket_content_presenter.py  ticket_state_presenter.py  tickets_list_presenter.py
anchor/ui/themes/: light_theme.py
anchor/ui/widgets/: ticket_page.py  ticket_widget.py
assets/: icon.icns
docs/: api_reference.md  development.md  user_guide.md
offline_data/: data_cache.sqlite
packaging/data/icons/: anchor.icns
resources/ui/: base_window.ui  configuration_dialog.ui  feature_branch_dialog.ui  jira_server_dialog.ui  jira_ticket_dialog.ui  progress_dialog.ui
tests/: test_application.py  test_jql_config.py
