[project]
name = "anchor-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython",
    "pyqt6",
    "pyqt6-webengine>=6.10.0",
    "requests",
    "requests-cache",
    "tinydb",
    "jira",
]
authors = [
    {name = "NL", email = "info@deskriders.dev"},
]
urls = {Repository = "https://github.com/namuan/anchor-app"}

[project.gui-scripts]
anchor-app = "anchor.application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anchor"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest",
    "pytest-cov",
    "pytest-faulthandler",
    "pytest-mock",
    "pytest-qt",
]
